add some basic command for git

--- a/test.html
+++ b/test.html
@@ -5,5 +5,18 @@
 </head>
 <body>
 <h2>Hello World!</h2>
+<p>
+	
+1. git init
+2. git add [fileName] || -A   ------add file in staging area
+3. git status
+4. git commit  -------commit file from stage to local repo
+5. git remote add origin repoName ----------for create connection between local to remote
+6. git push origin master -----------push changes to remote
+//------------------------------for new user------------------
+7. git clone reponame
+8. git pull origin master
+
+</p>
 </body>
 </html>
