add some more cmd for git.

--- a/test.html
+++ b/test.html
@@ -16,6 +16,12 @@
 //------------------------------for new user------------------
 7. git clone reponame
 8. git pull origin master
+//--------------------------------
+9. git branch  -----give all branch name list
+10. git branch [branch name] -------- create branch
+11. git checkout [branch name] ------switch branch 
+12. git merge [branch name] -----merge branch ---- 
+     ex. git merge feature. Fire this cmd from develop or master, then feature branch merge into master||develop
 
 </p>
 </body>
