add cmd for delete a branch

--- a/test.html
+++ b/test.html
@@ -22,6 +22,9 @@
 11. git checkout [branch name] ------switch branch 
 12. git merge [branch name] -----merge branch ---- 
      ex. git merge feature. Fire this cmd from develop or master, then feature branch merge into master||develop
+ 12.1). git branch -d [branch name] -----delete branch 
+      ex. git branch -d feature. Fire this cmd from (develop or master) branch
+    
 //-------------------------------------------------------------------------
  13.// delete directory from local and git
     a) git rm -r one-of-the-directories // This deletes from filesystem
