--- a/test.html
+++ b/test.html
@@ -35,6 +35,11 @@
     a)git rm -r --cached FolderName
     b)git commit -m "Removed folder from repository"
     c)git push origin master
+
+    //==================================================
+   15. git log  --------give all commits
+   16. git log -2 ---- give last two commit, if give value 3, then give last 3 commit
+   17. git log --oneline   ----------- git commit messsages 
 </p>
 </body>
 </html>
