add cmd for stash

--- a/test.html
+++ b/test.html
@@ -40,6 +40,12 @@
    15. git log  --------give all commits
    16. git log -2 ---- give last two commit, if give value 3, then give last 3 commit
    17. git log --oneline   ----------- git commit messsages 
+   //=====================================================
+   18. git stash save "any message"
+   19. git stash list
+   20. git stash apply [stash-name] 
+   21. git stash drop [stash-name]
+   22. git stash clear ------ remove all stash from list
 </p>
 </body>
 </html>
