add cmd for unstage file

--- a/test.html
+++ b/test.html
@@ -45,7 +45,11 @@
    19. git stash list
    20. git stash apply [stash-name] 
    21. git stash drop [stash-name]
-   22. git stash clear ------ remove all stash from list
+   22. git stash clear ------ remove all stash from list. 
+   //----------------------------------------------------------
+   23. git reset head [file-name] ---- unstage a file from staging area
+   24. git reset -------------- unstage files from staging area. 
+         Ex: if we want unstage more than one file from staging area.
 </p>
 </body>
 </html>
