add cmd for remove file from commit which is not pushed

--- a/test.html
+++ b/test.html
@@ -50,6 +50,12 @@
    23. git reset head [file-name] ---- unstage a file from staging area
    24. git reset -------------- unstage files from staging area. 
          Ex: if we want unstage more than one file from staging area.
+    //=============================================================
+   25. git reset --soft HEAD~1   ------this cmd use to remove commit file, which is not pushed yet.
+               and also keep your chages in working dir.
+
+   26. git reset --hard HEAD~1   ------this cmd use to remove commit file, which is not pushed yet.
+               but it will also delete your chages from working dir.
 </p>
 </body>
 </html>
